--- a/Ixperta/app/App_Resources/Android/AndroidManifest.xml
+++ b/Ixperta/app/App_Resources/Android/AndroidManifest.xml
@@ -17,7 +17,7 @@
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
-
+	
 	<application
 		android:name="com.tns.NativeScriptApplication"
 		android:allowBackup="true"
@@ -32,6 +32,9 @@
 			android:theme="@style/LaunchScreenTheme">
 
 			<meta-data android:name="SET_THEME_ON_LAUNCH" android:resource="@style/AppTheme" />
+			<meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDiuRwKIU044ppK_GHVCZxcDHpw3aVpYh4" />
 
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
