--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nativescript-floatingactionbutton": "^2.2.7",
     "nativescript-google-maps-sdk": "^1.4.3",
     "nativescript-texttospeech": "^1.3.2",
-    "nativescript-theme-core": "~1.0.2"
+    "nativescript-theme-core": "~1.0.2",
+    "tns-core-modules": "^2.5.1"
   },
   "devDependencies": {
     "babel-traverse": "6.4.5",
